5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1761_2101.log
== TEST (2019-05-26 14:02:00) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

vetorN[0] =  0
vetorN[1] = 1

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1

print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:02:39) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

vetorN[0] = 0
vetorN[1] = 1

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1

print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:03:58) 
-- CODE:
from numpy import *

vetorN = array(input("digite numeros: "))

vetorN[0] = 0
vetorN[1] = 1

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1

print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:04:30) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

vetorN[0] = "0"
vetorN[1] = "1"

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1

print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:09:55) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1
	
vetorN[0] = 0
vetorN[1] = 1

print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:10:40) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1
	
vetorN[0,1] = [0,1]

print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:10:47) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	cont = cont + 1
	
print(vetorN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:11:28) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:11:42) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:12:05) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
vetorN = 0
vetorN = 1
cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:12:33) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
vetorN[0] = 0
vetorN[1] = 1
cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:14:09) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
vetorN[0] 
vetorN[1] 
cont = 2
while(cont < size(vetorN)):
	vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
	#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:27:26) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN[cont] = cont
	else:
		vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:29:14) 
-- CODE:
from numpy import *

vetorN = array(input("digite numeros: "))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN[cont] = cont
	else:
		vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:30:55) 
-- CODE:
from numpy import *

vetorN = input("digite numeros: ")

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN[cont] = cont
	else:
		vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:32:36) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = cont
	else:
		vetorN[cont] = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:32:53) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = cont
	else:
		vetorN = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:33:17) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = cont
	else:
		vetorN = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN)
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:33:45) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = cont
	else:
		vetorN = vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:34:10) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = cont
	else:
		vetorN = vetorN[:-2] + vetorN[:-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:35:18) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = cont
	else:
		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	print(vetorN[cont])
	cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:50:36) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:50:46) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
print(vetorN[0])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:51:01) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
print(vetorN[0,2,4])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:51:16) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
print(vetorN[])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
File "XXXX", line 4
    print(vetorN[])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:51:24) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:08:09) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:08:29) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:08:43) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:09:33) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array()
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:09:46) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(eval())
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:09:57) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(eval(4))
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:10:05) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(4)
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:10:11) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
print(vetorN[10,2,3,5])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:10:56) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN[0] = 10
vetorN[0] = 2
vetorN[0] = 3
vetorN[0] = 5
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:11:06) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN[0] = 10
vetorN[1] = 2
vetorN[2] = 3
vetorN[3] = 5
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:12:32) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN[0,1,2,3] = 10
vetorN[1] = 2
vetorN[2] = 3
vetorN[3] = 5
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:12:40) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN[1] = 10
vetorN[1] = 2
vetorN[2] = 3
vetorN[3] = 5
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:12:46) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = 10
vetorN[1] = 2
vetorN[2] = 3
vetorN[3] = 5
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:12:55) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = 10
vetorN = 2
vetorN = 3
vetorN = 5
print(vetorN)

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:13:06) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = 10
vetorN = 2
vetorN = 3
vetorN = 5
print(vetorN[1])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:15:12) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = 10
vetorN = 2
vetorN = 3
vetorN = 5
print(vetorN[])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
File "XXXX", line 9
    print(vetorN[])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:15:20) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = 10
vetorN = 2
vetorN = 3
vetorN = 5
print(vetorN[0])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:15:40) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = 10
vetorN = 2
vetorN = 3
vetorN = 5
print(int(vetorN[0]))

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:16:06) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = "10"
vetorN = "2"
vetorN = "3"
vetorN = "5"
print(vetorN[0])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:16:18) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = "10"
vetorN = "2"
vetorN = "3"
vetorN = "5"
print(vetorN[1])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:16:28) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = "10"
vetorN = "2"
vetorN = "3"
vetorN = "5"
print(vetorN[3])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:16:40) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array(5)
vetorN = "10"
vetorN = "2"
vetorN = "3"
vetorN = "5"
print(vetorN[0])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:18:55) 
-- CODE:
from numpy import *

#vetorN = array(eval(input("digite numeros: ")))
vetorN = array([10,2,4,5])

print(vetorN[0])

#cont = 0
#while(cont < size(vetorN)):
	#if (cont < 2):
	#	vetorN = cont
	#else:
#		vetorN = cont #vetorN[cont-2] + vetorN[cont-2] 
		#= [p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2]
	#print(vetorN[cont])
	#cont = cont + 1
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:22:15) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN([cont]))
	cont = cont + 1

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:23:43) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
		print(vetorN)
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN([cont]))
	cont = cont + 1

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:24:02) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
		print(vetorN)
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN)
	cont = cont + 1

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:24:49) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
		print(vetorN[cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN)
	cont = cont + 1

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:25:13) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN)
	cont = cont + 1

print(vetorN[cont])	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:25:25) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN)
	cont = cont + 1

print(vetorN)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:26:15) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	cont = cont + 1
	print(vetorN[cont])	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:26:31) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
while(cont < size(vetorN)):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	
	print(vetorN[cont])	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:27:03) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
index = size(vetorN)
while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	
	print(vetorN[cont])	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:28:11) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
index = size(vetorN)

while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(vetorN[cont])	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:28:57) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
index = size(vetorN)

while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(cont)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:30:00) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
index = size(vetorN)
vetorN = array([0,1])
while(cont < index):
	if (cont < 2):
		
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(cont)	
	cont = cont + 1

-- ERROR:
File "XXXX", line 11
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:30:13) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
index = size(vetorN)
vetorN = array([0,1])
while(cont < index):
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(cont)	
	cont = cont + 1

-- ERROR:
File "XXXX", line 12
    print(cont)	
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:30:34) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
index = size(vetorN)
vetorN = array([0,1])
while(cont < index):
	vetorN = array([cont-2]) + array([cont-1]) 
	#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(cont)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:30:50) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
index = size(vetorN)
vetorN = array([0,1])
while(cont < index):
	vetorN = array([cont-2]) + array([cont-1])
	print(cont)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:31:03) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 2
index = size(vetorN)
vetorN = array([0,1])
while(cont < index):
	#vetorN = array([cont-2]) + array([cont-1])
	print(cont)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:31:27) 
-- CODE:
from numpy import *

vetorN = array(eval(input("digite numeros: ")))

cont = 0
index = size(vetorN)
print(index)
while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(vetorN[cont])	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:32:07) 
-- CODE:
from numpy import *

vetorN = array(input("digite numeros: "))

cont = 0
index = size(vetorN)
print(index)
while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(vetorN[cont])	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:34:13) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(vetorN[cont])	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:34:23) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
		print(vetorN[3])
	print(vetorN)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:34:35) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if (cont < 2):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:35:09) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if (cont <= 1):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(vetorN)	
	cont = cont + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:35:39) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if (cont <= 1):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	
	cont = cont + 1
print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:36:13) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if (cont <= 1):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(cont)
	cont = cont + 1
print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:36:56) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	else:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(cont)
	cont = cont + 1
print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:37:13) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif:
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(cont)
	cont = cont + 1
print(vetorN)	
-- ERROR:
File "XXXX", line 9
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:37:27) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN = array([cont-2]) + array([cont-1]) 
		#= ([p0 , p1 , p2-2=p0 , p3-2=p1] [0, 1, 1 , 2])
	print(cont)
	cont = cont + 1
print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:37:53) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN = array([cont-2]) + array([cont-1]) 
	print(cont)
	cont = cont + 1
	print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:38:59) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN = array([cont-1]) + array([cont-2]) 
	print(cont)
	cont = cont + 1
	print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:39:53) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = vetorN([cont-1]) + vetorN([cont-2]) 
	print(cont)
	cont = cont + 1
	print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:40:31) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = vetorN([cont-1]) + vetorN([cont-2]) 
		print(cont)
	cont = cont + 1
	print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:41:08) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = array([cont-1]) + array([cont-2]) 
		print(cont)
	cont = cont + 1
	print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:41:49) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = array([cont-1]) + array([cont-2]) 
		print(cont)
	cont = cont + 1
	print(vetorN)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:42:15) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = array([cont-1]) + array([cont-2]) 
	cont = cont + 1
	print(vetorN[cont])	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:42:46) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = array([cont-1]) + array([cont-2]) 
	print(vetorN[cont])
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:03:51) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = array([cont-1]) + array([cont-2]) 
	print(vetorN[cont])
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:04:19) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = array([cont-1]) + array([cont-2]) 
	print(vetorN([cont]))
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:05:31) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN[cont])
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:08:35) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN(cont) = vetorN(cont-1) + vetorN(cont-2) 
	print(vetorN(cont))
	cont = cont + 1
		
-- ERROR:
File "XXXX", line 10
    vetorN(cont) = vetorN(cont-1) + vetorN(cont-2) 
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:12:38) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetorN = array([cont])
print(vetorN)
vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
print(vetorN[cont])

while(cont < index):
	if(cont <= 1):
		vetorN = array([cont])
	elif(cont > 1):
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN(cont))
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:15:02) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN(cont))
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:15:15) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN[cont])
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:15:39) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index):
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:21:33) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = arange(5)
print(vetor)

while(cont < index): 
#	if(cont < 2):
#		vetorN = array([cont])
#	elif(cont == 2):
#		vetorN = array(1)
#	else:
#		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
#	print(vetorN)
#	cont = cont + 1
		
-- ERROR:
File "XXXX", line 18
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:21:42) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = arange(5)
print(vetor)

#while(cont < index): 
#	if(cont < 2):
#		vetorN = array([cont])
#	elif(cont == 2):
#		vetorN = array(1)
#	else:
#		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
#	print(vetorN)
#	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:34:37) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0

while(cont < index): 
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:36:35) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = array([1,3,4,5,7,8,9])
mostre = vetor[2] + vetor[1]
print(mostre)
while(cont < index): 
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		vetorN[cont] = vetorN[cont-1] + vetorN[cont-2] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:38:42) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = array([1,3,4,5,7,8,9])
mostre = vetor[2] + vetor[1]
print(mostre)
while(cont < index): 
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		a = cont - 1
		b = cont - 2
		vetorN[cont] = vetorN[a] + vetorN[b] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:40:50) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = array([1,3,4,5,7,8,9])
mostre = vetor[2] + vetor[1]
vetor[6] = mostre
print(vetor)
while(cont < index): 
	if(cont < 2):
		vetorN = array([cont])
	elif(cont == 2):
		vetorN = array(1)
	else:
		a = cont - 1
		b = cont - 2
		vetorN[cont] = vetorN[a] + vetorN[b] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:44:13) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = array([1,3,4,5,7,8,9])
mostre = vetor[2] + vetor[1]
vetor[6] = mostre
print(vetor)
while(cont < index): 
	if(cont < 2):
		vetorN[cont] = cont
	elif(cont == 2):
		vetorN[cont] = 1
	else:
		a = cont - 1
		b = cont - 2
		vetorN[cont] = vetorN[a] + vetorN[b] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:45:03) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetor = array([1,3,4,5,7,8,9])
mostre = vetor[2] + vetor[1]
vetor[6] = mostre
print(vetor)
while(cont < index): 
	if(cont < 2):
		vetorN[0] = 0
		vetorN[1] = 1
		vetorN[2] = 1
	else:
		a = cont - 1
		b = cont - 2
		vetorN[cont] = vetorN[a] + vetorN[b] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:46:13) 
-- CODE:
from numpy import *

index = int(input("digite numeros: "))
cont = 0
vetorN = array()

while(cont < index): 
	if(cont < 2):
		vetorN[0] = 0
		vetorN[1] = 1
		vetorN[2] = 1
	else:
		a = cont - 1
		b = cont - 2
		vetorN[cont] = vetorN[a] + vetorN[b] 
	print(vetorN)
	cont = cont + 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
